--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flow-vue-ssr-hook",
   "version": "1.0.0",
-  "description": "",
+  "description": "flow-build针对vue服务端渲染的解决方案",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,7 +18,6 @@
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
     "vue-loader": "^14.2.1",
-    "vue-server-renderer": "^2.5.13",
     "webpack-node-externals": "^1.6.0"
   }
 }
