--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "flow-vue-ssr-hook",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "flow-build针对vue服务端渲染的解决方案",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type":"git",
+    "type": "git",
     "url": "git+https://github.com/ysk2014/flow-vue-ssr-hook.git"
   },
   "author": {
@@ -18,6 +18,7 @@
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
     "vue-loader": "^14.2.1",
+    "vue-style-loader": "^4.0.2",
     "webpack-node-externals": "^1.6.0"
   }
 }
