--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   },
   "license": "ISC",
   "dependencies": {
-    "extract-text-webpack-plugin": "^3.0.2",
-    "vue-loader": "^14.2.1",
-    "vue-style-loader": "^4.0.2",
-    "webpack-node-externals": "^1.6.0"
+    "extract-text-webpack-plugin": "~3.0.2",
+    "vue-loader": "~14.2.1",
+    "vue-style-loader": "~4.0.2",
+    "webpack-node-externals": "~1.6.0"
   }
 }
