--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flow-vue-ssr-hook",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "flow-build针对vue服务端渲染的解决方案",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,7 @@
     "extract-text-webpack-plugin": "~3.0.2",
     "querystring": "^0.2.0",
     "vue-loader": "~14.2.1",
+    "vue-meta": "^1.5.0",
     "vue-style-loader": "~4.0.2",
     "webpack-node-externals": "~1.6.0"
   }
