--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flow-vue-ssr-hook",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "flow-build针对vue服务端渲染的解决方案",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,12 @@
     "url": "https://github.com/ysk2014"
   },
   "license": "ISC",
+  "keywords": [
+    "flow-build",
+    "vue",
+    "vue-server-renderer",
+    "ssr"
+  ],
   "dependencies": {
     "extract-text-webpack-plugin": "~3.0.2",
     "querystring": "^0.2.0",
