--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "ssr"
   ],
   "dependencies": {
-    "extract-text-webpack-plugin": "~3.0.2",
     "querystring": "^0.2.0",
-    "vue-loader": "~14.2.1",
+    "vue-loader": "^15.4.2",
     "vue-meta": "^1.5.0",
-    "vue-style-loader": "~4.0.2",
-    "webpack-node-externals": "~1.6.0"
+    "vue-style-loader": "^4.1.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
