--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flow-vue-ssr-hook",
-  "version": "1.2.7",
+  "version": "2.0.0-alpha.0",
   "description": "flow-build针对vue服务端渲染的解决方案",
   "main": "index.js",
   "scripts": {
